--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>HW 10</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <!-- <load ="partials/header.html" /> -->
 
     <section>
-      <h1>Example page title</h1>
+      <h1>HW 10</h1>
       <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
+      <!-- <img src="./img/javascript.svg" alt="" /> -->
+      <ul>
+        <li class="nav-item">
+          <a href="./1-timer.html" class="nav-link">Timer</a>
+        </li>
+        <li class="nav-item">
+          <a href="./2-snackbar.html" class="nav-link">Snackbar</a>
+        </li>
+      </ul>
     </section>
 
     <!-- Loads the specified .html file -->
     <load ="partials/vite-promo.html" />
 
-    <script type="module" src="./main.js"></script>
+    <!-- <script type="module" src="./main.js"></script> -->
   </body>
 </html>
