--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
     <title>HW 10</title>
     <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!-- <load ="partials/header.html" /> -->
 
-    <section>
+  </head>
+
+  <body>
+
       <h1>HW 10</h1>
-      <!-- Path to images as from index.html file -->
-      <!-- <img src="./img/javascript.svg" alt="" /> -->
+
       <ul>
         <li class="nav-item">
           <a href="./1-timer.html" class="nav-link">Timer</a>
@@ -22,11 +26,6 @@
           <a href="./2-snackbar.html" class="nav-link">Snackbar</a>
         </li>
       </ul>
-    </section>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <!-- <script type="module" src="./main.js"></script> -->
   </body>
 </html>
