--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -1,22 +1,37 @@
-
-<input type="text" id="datetime-picker" />
-<button type="button" data-start>Start</button>
-
-<div class="timer">
-  <div class="field">
-    <span class="value" data-days>00</span>
-    <span class="label">Days</span>
-  </div>
-  <div class="field">
-    <span class="value" data-hours>00</span>
-    <span class="label">Hours</span>
-  </div>
-  <div class="field">
-    <span class="value" data-minutes>00</span>
-    <span class="label">Minutes</span>
-  </div>
-  <div class="field">
-    <span class="value" data-seconds>00</span>
-    <span class="label">Seconds</span>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./css/1-timer.css" rel="stylesheet">
+  <title>HW 10 Timer</title>
+</head>
+<body>
+  <a href="./index.html">Back</a>
+  <div class="section">
+      <input type="text" id="datetime-picker"  class="datetime-picker"/>
+  <button type="button" data-start>Start</button>
 </div>
+  <div class="timer">
+    <div class="field">
+      <span class="value" data-days>00</span>
+      <span class="label">Days</span>
+    </div>
+    <div class="field">
+      <span class="value" data-hours>00</span>
+      <span class="label">Hours</span>
+    </div>
+    <div class="field">
+      <span class="value" data-minutes>00</span>
+      <span class="label">Minutes</span>
+    </div>
+    <div class="field">
+      <span class="value" data-seconds>00</span>
+      <span class="label">Seconds</span>
+    </div>
+  </div>
+ 
+
+  <script src="./js/1-timer.js" type="module" defer></script>
+</body>
+</html>
