--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -7,7 +7,7 @@
   <title>HW 10 Timer</title>
 </head>
 <body>
-  <a href="./index.html">Back</a>
+  <p><a href="./index.html">Go back</a></p>
   <div class="section">
       <input type="text" id="datetime-picker"  class="datetime-picker"/>
   <button type="button" data-start>Start</button>
