--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./index.html">Back</a>
+  <!-- <p><a href="./index.html">Go back</a></p> -->
     <form class="form">
         <label>
           Delay (ms)
@@ -26,8 +26,10 @@
           </label>
         </fieldset>
       
-        <button type="submit">Create notification</button>
+        <button type="submit" data-create>Create notification</button>
       </form>
+
+      <script src="./js/2-snackbar.js" type="module" defer></script>
     
 </body>
 </html>
